--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,6 +18,7 @@
 @import './components/related-posts.css';
 @import './components/go-deeper.css';
 @import './components/article.css';
+@import './components/contact.css';
 @import './components/search.css';
 @import './components/footer.css';
 
