--- a/src/partials/back-to-blog.html
+++ b/src/partials/back-to-blog.html
@@ -9,5 +9,5 @@
         {{related-posts:4}}
     </div>
 </section>
-
-<a href="/blog.html" class="back-link">בחזרה לכל הפוסטים</a>
+<!-- 
+<a href="/blog.html" class="back-link">בחזרה לכל הפוסטים</a> -->
