--- a/src/partials/related-posts.html
+++ b/src/partials/related-posts.html
@@ -3,7 +3,7 @@
         <h2>המשך לקרוא</h2>
         <p>פוסטים נוספים שעשויים לעניין אותך</p>
     </div>
-    <div class="post-grid related-posts-grid">
+    <div class="related-posts">
         {{related-posts:4}}
     </div>
 </section>
