fix(meta): update description and Open Graph tags for consistency and clarity

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -8,20 +8,15 @@
   <title>{{title}}</title>
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="/styles/main.css">
-
-  <meta name="description"
-    content="ברוכים הבאים למרחב המוקדש לאמונה בישוע המשיח. מאמרים, תובנות מהכתובים וכלים לצמיחה רוחנית." />
-
+  <meta property="description"
+    content="יומן מסע על החיפוש אחר אמת בעולם רועש. בלי תשובות מוכנות מראש, אלא עם רצון פשוט להבין איך הדרך של ישוע פוגשת אותנו בלב, בשכל ובחיים עצמם." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://yeshuablog.me{{url}}" />
   <meta property="og:site_name" content="ישוע בלוג" />
   <meta property="og:locale" content="he_IL" />
-
   <meta property="og:title" content="{{title}}" />
-
   <meta property="og:description"
-    content="גלו אמיתות מקראיות, את בשורת ישוע המשיח ותובנות לחיים. הצטרפו למסע של אמונה." />
-
+    content="יומן מסע על החיפוש אחר אמת בעולם רועש. בלי תשובות מוכנות מראש, אלא עם רצון פשוט להבין איך הדרך של ישוע פוגשת אותנו בלב, בשכל ובחיים עצמם." />
   <meta property="og:image" content="https://yeshuablog.me{{image}}" />
 
   <!-- Matomo -->
