--- a/src/styles/components/article.css
+++ b/src/styles/components/article.css
@@ -116,7 +116,7 @@ article p>img {
     position: relative;
 }
 
-.prose h2::after {
+/* .prose h2::after {
     content: '';
     position: absolute;
     bottom: -2px;
@@ -124,7 +124,7 @@ article p>img {
     width: 40px;
     height: 2px;
     background: var(--accent);
-}
+} */
 
 .prose h3 {
     color: var(--text);
