--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -19,26 +19,13 @@
     content="יומן מסע על החיפוש אחר אמת בעולם רועש. בלי תשובות מוכנות מראש, אלא עם רצון פשוט להבין איך הדרך של ישוע פוגשת אותנו בלב, בשכל ובחיים עצמם." />
   <meta property="og:image" content="https://yeshuablog.me{{image}}" />
 
-  <!-- Matomo -->
-  <!-- <script>
-    var _paq = window._paq = window._paq || [];
-    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-    _paq.push(['disableCookies']);
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function () {
-      var u = "//gray-oarfish.pikapod.net/";
-      _paq.push(['setTrackerUrl', u + 'matomo.php']);
-      _paq.push(['setSiteId', '1']);
-      var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-      g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
-    })();
-  </script> -->
-
   <script>
     var _paq = window._paq = window._paq || [];
     /* 1. DISABLE COOKIES (Privacy Mode) */
     _paq.push(['disableCookies']);
+
+    /* 2. HEARTBEAT TIMER (Update 'active' time every 15 seconds) */
+    _paq.push(['enableHeartBeatTimer', 15]);
 
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
