--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{title}}</title>
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="https://yeshuablog.me/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="/styles/main.css">
   <meta property="description"
     content="יומן מסע על החיפוש אחר אמת בעולם רועש. בלי תשובות מוכנות מראש, אלא עם רצון פשוט להבין איך הדרך של ישוע פוגשת אותנו בלב, בשכל ובחיים עצמם." />
